2021-09-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix comparison with left operand lower word in hl, upper word in de, right operand on stack.

2021-08-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/valdiag/tests/callingconvention.c:
	  Fix ___sdcccall diagnostics test.

2021-08-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/valdiag/valdiag.py:
	  Fix typo that disable some regression testing for gbz80.
	* src/z80/gen.c:
	  Fix __z88dk_fastcall stack cleanup.

2021-08-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Fix handling of Rabbit or iy, de in peephole optimizer.

2021-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic16/libsdcc/float/fseq.c,
	  device/lib/pic16/libsdcc/float/fsgt.c,
	  device/lib/pic16/libsdcc/float/fslt.c,
	  device/lib/pic16/libsdcc/float/fsneq.c:
	  Fix bug #3274.

2021-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  doc/sdccman.lyx,
	  .version:
	  Enable new calling convention for z80, z180, z80n, r2k, r2ka, r3ka, tlcs90, ez80_z80.

2021-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Do not use some aspects of new calling convention for banked functions.

2021-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/valdiag/tests/callingconvention.c,
	  support/valdiag/valdiag.py:
	  Fix diagnostics for __raisonance calling convention.

2021-08-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCval.c (valCastLiteral): possibly fix bug #3273

2021-08-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  doc/sdccman.lyx,
	  .version:
	  Enable new calling convention for stm8.

2021-08-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/valdiag/tests/callingconvention.c:
	  Diagnostics for conflicting calling conventions.

2021-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c:
	  Fix buffer overflow reported in patch #397 by Arnout Engelen .
