@@ -1,3 +1,8 @@
+2021-09-02 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/include/stdlib.h:
+	  C23 sized memory deallocation.
+
 2021-09-01 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
